# everybody-codes

./: .gitignore  Cargo.toml  download_notes.sh  memory_bench.txt  runtime_bench.txt
benches/: memory.rs  runtime.rs
src/: lib.rs  main.rs
src/event2024/: quest01.rs  quest02.rs  quest03.rs  quest04.rs  quest05.rs  quest06.rs  quest07.rs  quest08.rs  quest09.rs  quest10.rs  quest11.rs  quest12.rs  quest13.rs  quest14.rs  quest15.rs  quest16.rs  quest17.rs  quest18.rs  quest19.rs  quest20.rs
src/story01/: quest01.rs  quest02.rs  quest03.rs
src/util/: ansi.rs  math.rs  tools.rs
tests/: test.rs
tests/event2024/: quest01.rs  quest02.rs  quest03.rs  quest04.rs  quest05.rs  quest06.rs  quest07.rs  quest08.rs  quest09.rs  quest10.rs  quest11.rs  quest12.rs  quest13.rs  quest14.rs  quest15.rs  quest16.rs  quest17.rs  quest18.rs  quest19.rs  quest20.rs
tests/story01/: quest01.rs  quest03.rs
