[package]
name = "everybody-codes"
version = "0.1.0"
edition = "2024"

resolver = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"

[dependencies]
ahash = "0.8.12"
itertools = "0.14.0"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "memory"
harness = false
